# sqreen-core

./: .gitignore  .gitleaks.toml  ANNOUNCEMENT.md  LICENSE  README.md  SECURITY.md  install.sh
.cursor/: hooks.json
.cursor/hooks/: block-sensitive-paths.py
.github/: SECURITY.md  dependabot.yml
.github/workflows/: announce-release.yml  gitleaks.yml  release-mcp-proxy.yml  test.yml
docs/: CLEAN_INSTALL.md  LAUNCH_AUTOMATION.md
launch/: templates.yaml
mcp-proxy/: .env.example  Cargo.toml  install.sh  mcp-policy.yaml
mcp-proxy-sdk/: Cargo.toml  README.md
mcp-proxy-sdk/examples/demo_plugin/: Cargo.toml  lib.rs
mcp-proxy-sdk/src/: host.rs  lib.rs  memory.rs  runtime.rs
mcp-proxy/scripts/: e2e-behavioral-chain-test.sh  e2e-device-token-test.sh  e2e-policy-test.sh  e2e-threat-intel-cloud-test.sh  e2e-threat-intel-test.sh  setup.sh  smoke-test-install.sh  test-cursor-hook.sh  test-hook-telemetry.sh
mcp-proxy/src/: behavior.rs  cloud_client.rs  main.rs  peeker.rs  policy.rs  policy_store.rs  risk.rs  threat_intel.rs  wasm_engine.rs
mcp-proxy/test-fixtures/: threat-intel-e2e.txt
mcp-proxy/wasm/: policy_guest.wat
scripts/: render-launch-posts.sh
