[package]
name = "mcp-proxy-sdk"
version = "0.1.0"
edition = "2021"
description = "Author custom WebAssembly security plugins for the mcp-proxy sandbox"
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4.5"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
