[package]
name = "demo_plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
mcp-proxy-sdk = { path = "../.." }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
panic = "abort"
